compilateurMinCaml/tests/typechecking/valid/not.ml
let x = not true in ()