compilateurMinCaml/tests/typechecking/invalid/funRenvoyantFunRenvoyantElleMeme.ml
let rec f x = let rec g x = f in g in ()